--- a/index.html
+++ b/index.html
@@ -13,9 +13,165 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-<h1>Hello</h1>
-<h1>Hi Bangladesh</h1>
+
+<!--------header Section Start-------->
+<header class="mb-5 ">
+  <section class="container mt-5 mb-5">
+    <nav class="navbar navbar-expand-lg navbar-light mb-5">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+           
+          </ul>
+          <form class="d-flex manu">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item Nav-logo">
+                <a class="nav-link" href="#">Logo</a>
+              </li>
+            </ul>
+          </form>
+        </div>
+      </div>
+    </nav>
+<div class="row">
+  <div class="col-lg-6 col-12">
+    <div class="hedTex p-5">
+      <p class=" pb-2">Computer-controlled digital transistorized with electronic advance</p>
+      <h1 class="text-white pb-3">Honda CBR 300R</h1>
+      <p class="pb-3">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud Exercitation amet.
+        </p>
+        <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalToggleLabel">Are you interested in buying our bikes?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Contact us now because this offer is for a limited time.When you run out, you won't get it anymore.
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" data-bs-dismiss="modal">Open second page</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalToggleLabel2">Want to communicate?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Please contact sumonshakder1996@gmail.com very quickly.
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first page</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="btn btn-warning  px-5 py-lg-2 fs-5" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Purchase</a>
+    </div>
+  </div>
+
+  <div class="col-lg-6 col-12">
+    <img src="images/header-bike.png" alt="header-bike.png" class="img-fluid">
+  </div>
+</div>
+
+
+  </section>
+</header>
+  <!--------header Section End-------->
+
+
+  <!-- fetured bike section Start  -->
+<section class="container mt-5 mb-5">
+  <h1 class=" text-center fw-bolder">Fetured Bikes 2021</h1>
+  <p class=" text-center fw-bolder design">Best bike collection</p>
+  <hr class=" hr">
+  <div class="row mt-5 mb-5">
+    <div class="col-lg-4 col-12">
+     <div class="bick mt-5 w-75 mx-auto mb-4">
+      <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
+     </div>
+    </div>
+    <div class="col-lg-4 col-12">
+      <div class="bick mt-5 w-75 mx-auto mb-4">
+       <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
+      </div>
+     </div>
+     <div class="col-lg-4 col-12">
+      <div class="bick mt-5 w-75 mx-auto mb-4">
+       <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
+      </div>
+     </div>
+  </div>
+</section>
+ <!-- fetured bike section End  -->
+
+
+<!-- Latest News Section Start  -->
+<section class="container mb-5">
+  <h1 class="pt-5 text-center mb-5 fs-1 fw-bolder ">latest News</h1>
+  <div class="row">
+    <div class="col-lg-4 col-12">
+      <div class="cad mb-5 mx-auto mt-2">
+        <img class="img-fluid mb-4" src="images/bike-1.png" alt="bike-1.png">
+        <h2 class="fs-3 mb-3">Ducati XDIAVEL S-73</h2>
+        <p>This bike is dolor sit amet, consectetur
+          adipiscing elit. Lacus, fermentum amet
+          faucibus sed id nisi lectus at.</p>
+          <button class="More">Read More</button>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12">
+      <div class="cad mb-5 mx-auto mt-2">
+        <img class="img-fluid mb-4" src="images/bike-3.png" alt="bike-3.png">
+        <h2 class="fs-3 mb-3">2021 Honda CBR500</h2>
+        <p>This bike is dolor sit amet, consectetur
+          adipiscing elit. Lacus, fermentum amet
+          faucibus sed id nisi lectus at.</p>
+          <button>Read More</button>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12">
+      <div class="cad mb-5 mx-auto mt-2">
+        <img class="img-fluid mb-4" src="images/bike-2.png" alt="bike-2.png">
+        <h2 class="fs-3 mb-3">Motorcycles & Scooters</h2>
+        <p>This bike is dolor sit amet, consectetur
+          adipiscing elit. Lacus, fermentum amet
+          faucibus sed id nisi lectus at.</p>
+          <button>Read More</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Latest News Section End  -->
+
+
+
+<!-- Happy Clients says Section Start  -->
+
+<!-- Happy Clients says Section End  -->
+
     <!-- BOOTSTRAP JS LINK  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
