--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </nav>
 <div class="row">
-  <div class="col-lg-6 col-12">
+  <div class="col-lg-6 col-md-12  col-12">
     <div class="hedTex p-5">
       <p class=" pb-2">Computer-controlled digital transistorized with electronic advance</p>
       <h1 class="text-white pb-3">Honda CBR 300R</h1>
@@ -91,7 +91,7 @@
     </div>
   </div>
 
-  <div class="col-lg-6 col-12">
+  <div class="col-lg-6 col-md-12 col-12">
     <img src="images/header-bike.png" alt="header-bike.png" class="img-fluid">
   </div>
 </div>
@@ -108,19 +108,19 @@
   <p class=" text-center fw-bolder design">Best bike collection</p>
   <hr class=" hr">
   <div class="row mt-5 mb-5">
-    <div class="col-lg-4 col-12">
+    <div class="col-lg-4 col-md-12 col-12">
      <div class="bick mt-5 w-75 mx-auto mb-4">
-      <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
+      <img class="img-fluid bike-img" src="images/feature-bike.jpg" alt="feature-bike.jpg">
      </div>
     </div>
-    <div class="col-lg-4 col-12">
+    <div class="col-lg-4 col-md-12  col-12">
       <div class="bick mt-5 w-75 mx-auto mb-4">
        <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
       </div>
      </div>
-     <div class="col-lg-4 col-12">
+     <div class="col-lg-4 col-md-12  col-12">
       <div class="bick mt-5 w-75 mx-auto mb-4">
-       <img class="img-fluid" src="images/feature-bike.jpg" alt="feature-bike.jpg">
+       <img class="img-fluid bike-img" src="images/feature-bike.jpg" alt="feature-bike.jpg">
       </div>
      </div>
   </div>
@@ -132,8 +132,8 @@
 <section class="container mb-5">
   <h1 class="pt-5 text-center mb-5 fs-1 fw-bolder ">latest News</h1>
   <div class="row">
-    <div class="col-lg-4 col-12">
-      <div class="cad mb-5 mx-auto mt-2">
+    <div class="col-lg-4 col-md-12  col-12">
+      <div class="cad mb-5 mt-2 mx-auto">
         <img class="img-fluid mb-4" src="images/bike-1.png" alt="bike-1.png">
         <h2 class="fs-3 mb-3">Ducati XDIAVEL S-73</h2>
         <p>This bike is dolor sit amet, consectetur
@@ -142,8 +142,8 @@
           <button class="More">Read More</button>
       </div>
     </div>
-    <div class="col-lg-4 col-12">
-      <div class="cad mb-5 mx-auto mt-2">
+    <div class="col-lg-4 col-md-12  col-12">
+      <div class="cad mb-5 mt-2 mx-auto">
         <img class="img-fluid mb-4" src="images/bike-3.png" alt="bike-3.png">
         <h2 class="fs-3 mb-3">2021 Honda CBR500</h2>
         <p>This bike is dolor sit amet, consectetur
@@ -152,8 +152,8 @@
           <button>Read More</button>
       </div>
     </div>
-    <div class="col-lg-4 col-12">
-      <div class="cad mb-5 mx-auto mt-2">
+    <div class="col-lg-4 col-md-12  col-12">
+      <div class="cad mb-5 mt-2 mx-auto">
         <img class="img-fluid mb-4" src="images/bike-2.png" alt="bike-2.png">
         <h2 class="fs-3 mb-3">Motorcycles & Scooters</h2>
         <p>This bike is dolor sit amet, consectetur
@@ -167,10 +167,208 @@
 <!-- Latest News Section End  -->
 
 
-
 <!-- Happy Clients says Section Start  -->
-
+<section class="container mb-5">
+  <h1 class="pt-5 mb-5 text-center">Happy <span class="color">Clients says</span></h1>
+<div class="row">
+<div class="col-lg-4 col-md-12  col-12">
+  <div class="cadd mx-auto mt-5 text-center">
+    <img src="images/user-1.png " alt="user-1.png" class="img-fluid w-50 mb-5 d-block mx-auto">
+    <p>Slate helps you see how many more days you need to work to reach your financial goal for the mont and year.
+      </p>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>  
+      <i class="fas fa-star    "></i>
+      <i class="far fa-star"></i> <br> <br>
+      <b class="text-primary">Regina Miles</b> <br> <br>
+<span>Banker</span>
+  </div>
+</div>
+<div class="col-lg-4 col-md-12  col-12">
+  <div class="cadd mx-auto mt-5 text-center">
+    <img src="images/user-2.png " alt="user-2.png" class="img-fluid w-50 mb-5 d-block mx-auto">
+    <p>Slate helps you see how many more days you need to work to reach your financial goal for the mont and year.
+      </p>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>  
+      <i class="fas fa-star    "></i>
+      <i class="far fa-star"></i> <br> <br>
+      <b class="text-primary">Regina Miles</b> <br> <br>
+<span>Banker</span>
+  </div>
+</div>
+<div class="col-lg-4 col-md-12  col-12">
+  <div class="cadd mx-auto mt-5 text-center">
+    <img src="images/user-1.png " alt="user-1.png" class="img-fluid w-50 mb-5 d-block mx-auto">
+    <p>Slate helps you see how many more days you need to work to reach your financial goal for the mont and year.
+      </p>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>
+      <i class="fas fa-star    "></i>  
+      <i class="fas fa-star    "></i>
+      <i class="far fa-star"></i> <br> <br>
+      <b class="text-primary">Regina Miles</b> <br> <br>
+<span>Banker</span>
+  </div>
+</div>
+</div>
+</section>
 <!-- Happy Clients says Section End  -->
+
+
+<!-- Frequently Asked Questions Section Start  -->
+<section class="container mb-5">
+  <h1 class="pt-5 mb-5 text-center">Frequently Asked <span class="color">Questions</span></h1>
+<div class="row">
+  <div class="col-lg-6 col-md-12 col-12">
+<div class="faq mt-5 mx-auto">
+  <img src="images/faq.png" alt="faq.png" class="img-fluid mb-5">
+</div>
+  </div>
+  <div class="col-lg-6 col-md-12  col-12">
+<div class="faqs mt-3 mx-auto p-5">
+  <div class="accordion" id="accordionPanelsStayOpenExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+          We provide you with that service-1
+        </button>
+      </h2>
+      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+        <div class="accordion-body">
+          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the  though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+          We provide you with that service-2
+        </button>
+      </h2>
+      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+        <div class="accordion-body">
+          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the  though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+  
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+          We provide you with that service-3
+        </button>
+      </h2>
+      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+        <div class="accordion-body">
+          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+   
+      </div>
+    </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </div>
+</div>
+
+</section>
+<!-- Frequently Asked Questions Section End  -->
+
+
+<!-- Our factory section Start  -->
+<section class="container mb-3">
+  <h1 class=" text-center mt-5 text-info mb-3">YOU CAN VISIT OUR FACTORY</h1>
+  <div id="carouselExampleIndicators" class="carousel slide mt-5" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/sowroom-1.png" class="d-block w-100" alt="images/sowroom-1.png">
+      </div>
+      <div class="carousel-item">
+        <img src="images/sowroom-2.png" class="d-block w-100" alt="images/sowroom-2.png">
+      </div>
+      <div class="carousel-item">
+        <img src="images/sowroom-3.png" class="d-block w-100" alt="images/sowroom-3.png">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section>
+<!-- Our factory section End  -->
+
+ <!-- The history of honda Section Start  -->
+ <section class="container mb-5">
+   <h1 class=" text-center mt-5 text-primary text-uppercase mb-5 ">History and tradition of Honda bikes</h1>
+   <div class="row">
+     <div class="col-lg-4 col-md-12  col-12">
+       <div class="bikeCad mx-auto">
+         <img src="images/oldBike-1.png" alt="images/oldBike-1.png" class="img-fluid mb-4 old">
+         <p class="px-5 text-success">1963 Honda Cub 55 Motorcycle</p>
+       </div>
+     </div>
+     <div class="col-lg-4 col-md-12  col-12">
+      <div class="bikeCad mx-auto">
+        <img src="images/oldBike-2.png" alt="images/oldBike-2.png" class="img-fluid mb-4 old">
+        <p class="px-4 text-primary">1976 Honda Motorcycles CB 500</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12  col-12">
+      <div class="bikeCad mx-auto">
+        <img src="images/oldBike-3.png" alt="images/oldBike-3.png" class="img-fluid mb-4 old">
+        <p class="px-5 text-danger">1965 Honda Dream 305 Ca77</p>
+      </div>
+    </div>
+   </div>
+ </section>
+
+  <!-- The history of honda Section End  -->
+
+<!-- footer Section Start  -->
+<footer class=" mt-5">
+  <section class="container pt-5">
+   <div class="row mx-auto">
+     <div class="col-lg-10 col-md-12  col-12">
+       <div class="fotTex mt-3 mx-auto">
+        <p>Download Now <span>License</span></p>
+        <ul>
+          <li>About</li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Careers</li>
+          <li>Help</li>
+          <li>Privacy Policy</li>
+        </ul>
+        
+       </div>
+     </div>
+     <div class="col-lg-2 col-md-12  col-12">
+<div class="fotImg mx-auto">
+  <img src="images/Screenshot_2.png" alt="Screenshot_2.png" class="img-fluid w-75 mb-2">
+</div>
+     </div>
+     <h6 class="px-5 text-info text-center pb-3 "> &copy; 2021 bike.All Rights Reserved...,,,</h6>
+   </div>
+  </section>
+</footer>
+<!-- footer Section End  -->
+
 
     <!-- BOOTSTRAP JS LINK  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
