--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
         <h2 class="fs-3 mb-3">Ducati XDIAVEL S-73</h2>
         <p>This bike is dolor sit amet, consectetur
           adipiscing elit. Lacus, fermentum amet
-          faucibus sed id nisi lectus at.</p>
+          faucibus sed id nisi lectus at.
+         </p>
           <button class="More">Read More</button>
       </div>
     </div>
